--- a/BetaCode/package.json
+++ b/BetaCode/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@square/web-sdk": "^2.0.1",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
+    "react-square-web-payments-sdk": "^3.2.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
