--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
-    "square": "^40.0.0"
+    "square": "^40.0.0",
+    "twilio": "^5.4.5"
   },
   "name": "server",
   "version": "1.0.0",
