--- a/BetaCode/package.json
+++ b/BetaCode/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "env": "^0.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
