--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.7.9",
+    "@sendgrid/mail": "^8.1.4",
+    "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
