--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,24 @@
 {
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
+    "@types/node": "^22.13.10",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.20.3",
+    "clicksend": "^5.0.79",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
+    "request": "^2.88.2",
     "square": "^40.0.0",
-    "twilio": "^5.4.5"
+    "telesignsdk": "^3.0.2",
+    "twilio": "^5.4.5",
+    "typescript": "^5.8.2"
   },
   "name": "server",
   "version": "1.0.0",
