--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,21 +1,23 @@
 {
     "version": 2,
     "builds": [
-     {
-         "src": "./index.js",
-         "use": "@vercel/node"
-     }
+      {
+        "src": "./index.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-     {
-         "src": "/(.*)",
-         "dest": "/",
-         "methods": ["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-         "headers": {
-            "Access-Control-Allow-Origin": "*",
-            "Access-Control-Allow-Credentials": "true",
-            "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-         }
+      {
+        "src": "/(.*)",
+        "dest": "/",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "https://motgpayment.com",
+          "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+          "Access-Control-Allow-Credentials": "true",
+          "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
+          "Access-Control-Max-Age": "86400"
         }
+      }
     ]
   }
