--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.0.1",
     "mongoose": "^8.10.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "request": "^2.88.2",
     "square": "^40.0.0",
