--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "form-data": "^4.0.2",
+    "gaxios": "^6.7.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.0.1",
@@ -20,7 +23,7 @@
     "request": "^2.88.2",
     "square": "^40.0.0",
     "telesignsdk": "^3.0.2",
-    "twilio": "^5.4.5",
+    "twilio": "^5.5.1",
     "typescript": "^5.8.2"
   },
   "name": "server",
