--- a/BetaCode/package.json
+++ b/BetaCode/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.1",
     "react-square-web-payments-sdk": "^3.2.1",
     "tailwindcss": "^4.0.6"
   },
